Projeto/Compilador/tests/cases/ok/T46_ndice_constante_calculado_OK.pas
program T52;
var
  v: array[1..3] of integer;
begin
  v[1+2] := 10;
end.
