Projeto/Compilador/tests/cases/error/T31.pas
program T31;
var v: array[1..2] of integer;
begin
  writeln(v);
end.
